--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ attrs==25.4.0
 audioop-lts==0.2.2
 certifi==2025.10.5
 charset-normalizer==3.4.4
+click==8.3.0
 discord.py==2.6.4
 distro==1.9.0
 frozenlist==1.8.0
@@ -31,4 +32,5 @@ tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
+watchfiles==1.1.1
 yarl==1.22.0
